--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&ampfamily=Roboto:wght@400;500;700;900&ampdisplay=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Web Studio</title>
@@ -103,7 +103,7 @@
         </div>
       </section>
       <section class="main-activity">
-        <div class="container">
+        <div class="container activity-contatiner">
           <h2 class="section-title">What are we doing</h2>
           <ul class="main-activity-list list">
             <li class="main-activity-item">
@@ -139,13 +139,16 @@
           <ul class="list">
             <li class="team-item">
               <img
+                class="image"
                 src="./images/guerrero.jpg"
                 alt="Product Designer"
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-name">Mark Guerrero</h3>
-              <p class="team-item-position">Product Designer</p>
+              <div class="card">
+                <h3 class="team-item-name">Mark Guerrero</h3>
+                <p class="team-item-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -154,8 +157,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-name">Tom Ford</h3>
-              <p class="team-item-position">Frontend Developer</p>
+              <div class="card">
+                <h3 class="team-item-name">Tom Ford</h3>
+                <p class="team-item-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -164,8 +169,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-name">Camila Garcia</h3>
-              <p class="team-item-position">Marketing</p>
+              <div class="card">
+                <h3 class="team-item-name">Camila Garcia</h3>
+                <p class="team-item-position">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -174,8 +181,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-name">Daniel Wilson</h3>
-              <p class="team-item-position">UI Designer</p>
+              <div class="card">
+                <h3 class="team-item-name">Daniel Wilson</h3>
+                <p class="team-item-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -183,7 +192,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo link"
+        <a href="./index.html" class="logo footer-logo link"
           >Web<span class="span-footer">Studio</span></a
         >
         <p class="footer-txt">
