--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&ampfamily=Roboto:wght@400;500;700;900&ampdisplay=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Portfolio</title>
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo link"
             >Web<span class="span-header">Studio</span></a
@@ -63,7 +63,7 @@
 
     <main>
       <section>
-        <div class="container">
+        <div class="container portfolio-main">
           <h1 hidden>Products</h1>
           <ul class="filters list">
             <li><button type="button" class="filters-button">All</button></li>
