--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <section class="descrip">
         <div class="container">
-          <h2 class="descrip-title" hidden>Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="descrip-list list">
             <li class="descrip-list-item">
               <h3 class="descrip-list-title">Strategy</h3>
@@ -134,7 +134,7 @@
         </div>
       </section>
       <section class="team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list">
             <li class="team-item">
