--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
   <body>
     <header class="header">
       <div class="container header-container">
+        <h1 class="visually-hidden">Portfolio</h1>
         <nav class="header-navigation">
           <a href="./index.html" class="logo link"
             >Web<span class="span-header">Studio</span></a
@@ -64,7 +65,6 @@
     <main>
       <section>
         <div class="container portfolio-main">
-          <h1 hidden>Products</h1>
           <ul class="filters list">
             <li><button type="button" class="filters-button">All</button></li>
             <li>
@@ -86,8 +86,12 @@
                   alt="Banking app interface"
                   width="360"
                 />
-                <h2 class="product-item-name">Banking App Interface Concept</h2>
-                <p class="product-item-type">App</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="product-item-type">App</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
@@ -97,8 +101,10 @@
                   alt="Cashless Payment"
                   width="360"
                 />
-                <h2 class="product-item-name">Cashless Payment</h2>
-                <p class="product-item-type">Marketing</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Cashless Payment</h2>
+                  <p class="product-item-type">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
@@ -108,15 +114,19 @@
                   alt="Meditation App"
                   width="360"
                 />
-                <h2 class="product-item-name">Meditation App</h2>
-                <p class="product-item-type">App</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Meditation App</h2>
+                  <p class="product-item-type">App</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
               <a href="" class="link">
                 <img src="./images/taxi.jpg" alt="Taxi" width="360" />
-                <h2 class="product-item-name">Taxi Service</h2>
-                <p class="product-item-type">Marketing</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Taxi Service</h2>
+                  <p class="product-item-type">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
@@ -126,8 +136,10 @@
                   alt="Screen design"
                   width="360"
                 />
-                <h2 class="product-item-name">Screen Illustrations</h2>
-                <p class="product-item-type">Design</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Screen Illustrations</h2>
+                  <p class="product-item-type">Design</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
@@ -137,8 +149,10 @@
                   alt="Online courses"
                   width="360"
                 />
-                <h2 class="product-item-name">Online Courses</h2>
-                <p class="product-item-type">Marketing</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Online Courses</h2>
+                  <p class="product-item-type">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
@@ -148,16 +162,19 @@
                   alt="Instagram stories"
                   width="360"
                 />
-                <h2 class="product-item-name">Instagram Stories Concept</h2>
-                <p class="product-item-type">Design</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Instagram Stories Concept</h2>
+                  <p class="product-item-type">Design</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
               <a href="" class="link">
                 <img src="./images/food.jpg" alt="Organic Food" width="360" />
-
-                <h2 class="product-item-name">Organic Food</h2>
-                <p class="product-item-type">Web Site</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Organic Food</h2>
+                  <p class="product-item-type">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="product-item">
@@ -167,8 +184,10 @@
                   alt="Cup of coffee"
                   width="360"
                 />
-                <h2 class="product-item-name">Fresh Coffee</h2>
-                <p class="product-item-type">Web Site</p>
+                <div class="product-card">
+                  <h2 class="product-item-name">Fresh Coffee</h2>
+                  <p class="product-item-type">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
