--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,10 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <h1 class="visually-hidden">Portfolio</h1>
         <nav class="header-navigation">
           <a href="./index.html" class="logo link"
             >Web<span class="span-header">Studio</span></a
           >
-
           <ul class="header-menu list">
             <li class="header-menu-item">
               <a href="./index.html" class="header-menu-link link">Studio</a>
@@ -63,8 +61,9 @@
     </header>
 
     <main>
-      <section>
-        <div class="container portfolio-main">
+      <section class="main-portfolio">
+        <h1 class="visually-hidden">Portfolio</h1>
+        <div class="container">
           <ul class="filters list">
             <li><button type="button" class="filters-button">All</button></li>
             <li>
