--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </section>
       <section class="team">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list">
             <li class="team-item">
