--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
           </ul>
         </nav>
         <address class="header-address">
-          <ul class="list">
+          <ul class="adress list">
             <li class="header-address-item">
               <a
                 class="header-address-link link"
