--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <section class="team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul class="list">
+          <ul class="team-list">
             <li class="team-item">
               <img
                 class="image"
